name:                pure-contenteditable
version:             0.8.0.0
homepage:            purehs.org/doc/pure-contenteditable
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-contenteditable.git

library
  exposed-modules:
      Pure.ContentEditable

  build-depends:
    base,
    pure-core,
    pure-elm,
    pure-marker,
    pure-prop
    
  hs-source-dirs:      src
  default-language:    Haskell2010